@startuml
skinparam class {
    BackgroundColor white
    BorderColor Black
    FontColor Black
    ArrowColor Firebrick
}
skinparam roundcorner 0
hide empty members

package backend{
    left to right direction

    hide empty members
   class GameController {
        +enterRound(gameId: String, playerId: String) : RoundDto
    }

    class Game {
        id: String
        getState(): Game.State
    }

    class GameEntityService {
        findGame(): Game
        addRound(): Game
        maxPlayerActive(): Game


    }


    interface GameRepository

   interface GameService{
       getGame(gameId: String) : Game
       startNextRound(gameId: String) : Round
    }

    interface GameRepository

    class Round {
        +getState(): Round.State
    }

    GameController..>GameService


    GameService ..> Game
    GameService ..> Round
    GameService --> GameRepository
    GameService ..> GameEntityService


}
@enduml